--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,10 +11,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5.0.0
 
-      - name: instalar paquetes
-        run: |
-          chmod +x script.sh
-          ./script.sh
+#      - name: instalar paquetes
+#        run: |
+#          chmod +x script.sh
+#          ./script.sh
 
-
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v5.0.0
 
