--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,3 +19,5 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v5.0.0
 
+      - name: Version Node
+        uses: node --version
