--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,4 +20,4 @@ jobs:
         uses: actions/setup-node@v5.0.0
 
       - name: Version Node
-        uses: node --version
+        run: node --version
