--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,4 +34,6 @@ jobs:
       
       - name: mi acción
         uses: ./.github/actions/my-action
+        with:
+          message: "Patricio"
         
