--- a/.github/actions/my-action/action.yml
+++ b/.github/actions/my-action/action.yml
@@ -12,5 +12,5 @@ runs:
 
   steps:
     - name: Hola Mundo
-      run: echo " Hola {{inputs.message}}"
+      run: echo " Hola ${{inputs.message}}"
       shell: bash
